<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="230dp">


    <ImageView
        android:id="@+id/imgCell"
        android:layout_width="120sp"
        android:layout_height="230sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_marginLeft="135sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/txtnombre"
        android:layout_marginStart="135sp"
        android:layout_marginEnd="5dp" />

    <ImageView
        android:id="@+id/imgStar"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_below="@+id/txtNombre"
        android:layout_marginLeft="135sp"
        android:layout_marginTop="43dp"
        android:background="@drawable/star" />

    <TextView
        android:id="@+id/txtRating"
        android:layout_below="@+id/txtNombre"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="180sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/_9_0"
        android:layout_marginStart="180sp" />
    <TextView
        android:id="@+id/txtFecha"
        android:layout_below="@+id/txtRating"
        android:layout_marginLeft="135sp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/txtfecha"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="135sp" />

</RelativeLayout>